background video stretch works, fixed issue #10

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -105,7 +105,7 @@ html, body {
     }
   }
   main {
-    margin: 80px 10px 20px;
+    margin: 80px 0px 20px;
     display: block;
     clear: both;
     .video-bg {
@@ -123,6 +123,7 @@ html, body {
       width: 100%;
       height: 100%;
       z-index: 100;
+      object-fit: cover;
       background: url(/assets/images/Dissolve_D1_3_061_1.jpg) no-repeat;
       background-size: cover;
       z-index: 1;
@@ -133,6 +134,7 @@ html, body {
       width: auto;
       position: relative;
       z-index: 200;
+      padding: 20px 0px;
       & > * {
         display: table-cell;
         height: 100%;
